# llm-inference-mini-lab

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yaml
configs/: experiment.yaml.example
docker/: Dockerfile
src/: benchmark.py  benchmarking.py  llm_lab.py  run_evaluation.py  run_layer_by_layer.py
src/configs/: benchmark_config.yaml.example
src/quantizer/: utils.py
src/quantizer/models/: __init__.py  quant_linear.py
src/quantizer/passes/: __init__.py  quantize_linear.py
src/tools/: layer_by_layer_analysis.py
src/utils/: __init__.py  config_loader.py  eval_utils.py  lab_patch.py  logger.py  utils.py
src/utils/tools/: layer_by_layer_compare.py
tests/: benchmark_test.py  test_benchmark.py  test_quant_linear.py
tests/tools/: config_loader_test.py  get_linear_layers_test.py
tests/utils/: test_logger.py
