[project]
name = "llm_inference_mini_lab"
version = "0.1.0"
description = "LLM Inference Optimization Lab on RTX 3080Ti"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.0",
    "accelerate>=1.1.0",
    "bitsandbytes>=0.44.1",
    "scipy>=1.14.0",  # for calculating Perplexity
    "sentencepiece>=0.2.0",
    "protobuf>=5.28.0",
    "jupyter>=1.1.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0"
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D104",
    "D107",
    "D203",
    "D213",
    "G004",
    "T201"
]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D101"
]